使用java securityManager的安全管理器对用户代码权限进行限制，但是粒度太细了，搞起来很麻烦